Added plugin manager and tmux-continuum

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,5 +37,21 @@ bind -n M-l select-pane -R
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+# Alt-Shift Vim keys to switch windows
+bind -n M-H  previous-window
+bind -n M-L next-window
+
 # Reload tmux config
 bind r source-file ~/.tmux.conf
+
+# Tmux-continuum options
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '60'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
