Updated plugin list

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,6 +49,7 @@ set -g @continuum-restore 'on'
 set -g @continuum-save-interval '60'
 
 # List of plugins
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
