Made resizing panes repeatable and added ctrl vim keys for navigating command history

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,15 +17,15 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Vim-style pane resizing
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r H resize-pane -L 5
+bind-key -r L resize-pane -R 5
 
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
+bind-key -r M-j resize-pane -D
+bind-key -r M-k resize-pane -U
+bind-key -r M-h resize-pane -L
+bind-key -r M-l resize-pane -R
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
@@ -40,6 +40,10 @@ bind -n S-Right next-window
 # Alt-Shift Vim keys to switch windows
 bind -n M-H  previous-window
 bind -n M-L next-window
+
+# Ctrl Vim keys to navigate in command history
+bind -n C-k send-keys C-p
+bind -n C-j send-keys C-n
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
