Changed Ctrl +h and Ctrl + l bindings to work with Hangups

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,6 +44,8 @@ bind -n M-L next-window
 # Ctrl Vim keys to navigate in command history
 bind -n C-k send-keys C-p
 bind -n C-j send-keys C-n
+bind -n C-h send-keys C-t
+bind -n C-l send-keys C-y
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
