Make Tmux copy into OS buffer if xclip is installed

--- a/tmux.conf
+++ b/tmux.conf
@@ -47,6 +47,9 @@ bind -n C-j send-keys C-n
 bind -n C-h send-keys C-t
 bind -n C-l send-keys C-y
 
+# Copy to OS clipboard when pressing y
+bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+
 # Reload tmux config
 bind r source-file ~/.tmux.conf
 
