--- a/tmux.conf
+++ b/tmux.conf
@@ -55,7 +55,8 @@ bind r source-file ~/.tmux.conf
 
 # Tmux-continuum options
 set -g @continuum-restore 'on'
-set -g @continuum-save-interval '60'
+set -g @continuum-save-interval '15'
+set -g status-right 'Continuum status: #{continuum_status}'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
