Added true colors support for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g base-index 1
 set -s escape-time 0
 set-window-option -g mode-keys vi
@@ -47,15 +48,16 @@ bind -n C-j send-keys C-n
 bind -n C-h send-keys C-t
 bind -n C-l send-keys C-y
 
-# Copy to OS clipboard when pressing y
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+# Vim style copying to OS clipboard copying to OS clipboard
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
 
 # Tmux-continuum options
 set -g @continuum-restore 'on'
-set -g @continuum-save-interval '15'
+set -g @continuum-save-interval '60'
 set -g status-right 'Continuum status: #{continuum_status}'
 
 # List of plugins
