--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,9 @@ set -s escape-time 0
 set-window-option -g mode-keys vi
 set-window-option -g status-keys vi
 
+set -g status-bg colour56
+set -g status-fg white
+
 # remap prefix to Control + a
 set -g prefix C-a
 
@@ -15,7 +18,7 @@ unbind C-b
 bind h select-pane -L
 bind j select-pane -D 
 bind k select-pane -U
-bind l select-pane -R
+bind l select-pane -R 
 
 # Vim-style pane resizing
 bind-key -r J resize-pane -D 5
