Add swp files to gitignore

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,7 +51,7 @@ bind -n C-j send-keys C-n
 bind -n C-h send-keys C-t
 bind -n C-l send-keys C-y
 
-# Vim style copying to OS clipboard copying to OS clipboard
+# Vim style copying to OS clipboard 
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
