--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,18 @@ set -s escape-time 0
 set-window-option -g mode-keys vi
 set-window-option -g status-keys vi
 
-set -g status-bg colour56
-set -g status-fg white
+set -g status-bg colour24
+set -g status-fg colour16
+
+# set inactive/active window styles
+set -g window-style 'fg=colour8,bg=colour233'
+set -g window-active-style 'fg=colour253,bg=black'
+ 
+#pane border
+set -g pane-border-bg colour233
+set -g pane-border-fg colour240
+set -g pane-active-border-bg black
+set -g pane-active-border-fg colour38
 
 # remap prefix to Control + a
 set -g prefix C-a
