Changed ctrl mappings

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,19 +4,20 @@ set -g base-index 1
 set -s escape-time 0
 set-window-option -g mode-keys vi
 set-window-option -g status-keys vi
+set-option -gw xterm-keys on
 
 set -g status-bg colour24
 set -g status-fg colour16
 
 # set inactive/active window styles
-set -g window-style 'fg=colour8,bg=colour233'
-set -g window-active-style 'fg=colour253,bg=black'
+set -g window-style 'fg=colour8,bg=colour234'
+set -g window-active-style 'fg=colour255,bg=colour232'
  
 #pane border
 set -g pane-border-bg colour233
 set -g pane-border-fg colour240
 set -g pane-active-border-bg black
-set -g pane-active-border-fg colour38
+set -g pane-active-border-fg colour39
 
 # remap prefix to Control + a
 set -g prefix C-a
@@ -56,10 +57,10 @@ bind -n M-H  previous-window
 bind -n M-L next-window
 
 # Ctrl Vim keys to navigate in command history
-bind -n C-k send-keys C-p
-bind -n C-j send-keys C-n
-bind -n C-h send-keys C-t
-bind -n C-l send-keys C-y
+#bind -n C-k send-keys C-p
+#bind -n C-j send-keys C-n
+#bind -n C-h send-keys C-t
+#bind -n C-l send-keys C-y
 
 # Vim style copying to OS clipboard 
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
@@ -77,7 +78,10 @@ set -g status-right 'Continuum status: #{continuum_status}'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
