--- a/tmux.conf
+++ b/tmux.conf
@@ -6,18 +6,21 @@ set-window-option -g mode-keys vi
 set-window-option -g status-keys vi
 set-option -gw xterm-keys on
 
-set -g status-bg colour24
+set -g status-bg colour130
 set -g status-fg colour16
 
 # set inactive/active window styles
-set -g window-style 'fg=colour8,bg=colour234'
+set -g window-style 'fg=colour8,bg=colour235'
 set -g window-active-style 'fg=colour255,bg=colour232'
  
 #pane border
 set -g pane-border-bg colour233
 set -g pane-border-fg colour240
 set -g pane-active-border-bg black
-set -g pane-active-border-fg colour39
+set -g pane-active-border-fg colour130
+
+set -g status-right-fg colour16        # white, yellow, black
+set -g status-right-bg colour130
 
 # remap prefix to Control + a
 set -g prefix C-a
