Add pane splitting keys | and -

--- a/tmux.conf
+++ b/tmux.conf
@@ -28,6 +28,13 @@ set -g prefix C-a
 # bind 'C-a C-a' to type 'C-a'
 bind C-a send-prefix
 unbind C-b
+
+# Remap pane splitting keys
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
 # Vim style pane selection
 bind h select-pane -L
 bind j select-pane -D 
@@ -58,6 +65,9 @@ bind -n S-Right next-window
 # Alt-Shift Vim keys to switch windows
 bind -n M-H  previous-window
 bind -n M-L next-window
+
+# Don't rename windows automatically
+set-option -g allow-rename off
 
 # Ctrl Vim keys to navigate in command history
 #bind -n C-k send-keys C-p
