--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,4 @@
+set -g default-command "${SHELL}"
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g base-index 1
@@ -6,21 +7,16 @@ set-window-option -g mode-keys vi
 set-window-option -g status-keys vi
 set-option -gw xterm-keys on
 
-set -g status-bg colour130
-set -g status-fg colour16
+set -g status-style bg=colour130,fg=colour16
 
 # set inactive/active window styles
 set -g window-style 'fg=colour8,bg=colour235'
 set -g window-active-style 'fg=colour255,bg=colour232'
  
 #pane border
-set -g pane-border-bg colour233
-set -g pane-border-fg colour240
-set -g pane-active-border-bg black
-set -g pane-active-border-fg colour130
-
-set -g status-right-fg colour16        # white, yellow, black
-set -g status-right-bg colour130
+set -g pane-border-style bg=colour233,fg=colour240
+set -g pane-active-border-style bg=black,fg=colour130
+set -g status-right-style fg=colour16,bg=colour130       # white, yellow, black
 
 # remap prefix to Control + a
 set -g prefix C-a
@@ -53,9 +49,9 @@ bind-key -r M-h resize-pane -L
 bind-key -r M-l resize-pane -R
 
 # Use Alt-vim keys without prefix key to switch panes
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U 
 bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
-bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
 # Shift arrow to switch windows
@@ -63,7 +59,7 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 # Alt-Shift Vim keys to switch windows
-bind -n M-H  previous-window
+bind -n M-H previous-window
 bind -n M-L next-window
 
 # Don't rename windows automatically
